tests/syntax/invalid/hex_literal_trailing_underscore.zn
def f() {
    // error: underscore is trailing instead of between digits
    var x = 0x123_;
}
